# sudoku_tools

./: .gitignore  README.md
cpp/: CMakeLists.txt  Makefile  README.md  generate_dungeon_puzzles
cpp/docs/: go-to-cpp14-optimization-report.md
cpp/include/: dungeon_db_writer.h  mini_sudoku_generator.h  puzzle_db_writer.h  sudoku_generator.h
cpp/src/: dungeon_db_writer.cpp  main.cpp  main_dungeon.cpp  mini_sudoku_generator.cpp  puzzle_db_writer.cpp  sudoku_generator.cpp
db/: puzzles.db  puzzles.schema.sql
script/: export_ddl.py
